--- a/src/input.css
+++ b/src/input.css
@@ -2,35 +2,74 @@
 @tailwind components;
 @tailwind utilities;
 
+/*
+
+
+Fonts
+
+
+*/
 * {
-  touch-action: manipulation;
+  font-family: 'Inter', sans-serif;
 }
+
+/*
+
+Remove arrows from number input
+https://stackoverflow.com/questions/26024771/styling-an-input-type-number
+
+*/
+input[type='number'] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+  margin: 0;
+}
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/*
+
+Remove autofill background color
+
+*/
+
+/* https://stackoverflow.com/questions/2781549/removing-input-background-colour-for-chrome-autocomplete */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 600000s 0s, color 600000s 0s;
+}
+Ø input[data-autocompleted] {
+  background-color: transparent !important;
+}
+
+/*
+
+Scrollbar
+
+*/
 
 ::-webkit-scrollbar {
-  width: 12px;
-  height: 12px;
-  background-color: #1e1e1e;
+  width: 0px;
+  background: #000;
 }
-
-::-webkit-scrollbar-thumb {
-  background-color: #555;
-  border-radius: 10px;
-  border: 2px solid #1e1e1e;
-}
-
 ::-webkit-scrollbar-track {
-  background-color: #1e1e1e;
+  background: #000;
 }
-
+::-webkit-scrollbar-thumb {
+  background: #000;
+}
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #777;
+  background: #555;
 }
 
-::-webkit-scrollbar-thumb:active {
-  background-color: #999;
-}
-
-body {
-  scrollbar-color: #555 #1e1e1e;
-  scrollbar-width: thin;
+* {
+  scrollbar-color: #212121 #000;
+  scrollbar-width: none;
+  scrollbar-gutter: stable both-edges;
+  touch-action: manipulation;
 }
