Refactor UI components: streamline event handling and improve class management

--- a/public/input.css
+++ b/public/input.css
@@ -19,13 +19,13 @@ Remove arrows from number input
 https://stackoverflow.com/questions/26024771/styling-an-input-type-number
 
 */
-input[type='number'] {
+input[type="number"] {
   -moz-appearance: textfield;
   appearance: textfield;
   margin: 0;
 }
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
