--- a/public/input.css
+++ b/public/input.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  input::placeholder,
+  textarea::placeholder {
+    @apply text-placeholder;
+  }
+}
+
 /*
 
 
