--- a/public/input.css
+++ b/public/input.css
@@ -80,3 +80,29 @@ Scrollbar
   scrollbar-gutter: stable both-edges;
   touch-action: manipulation;
 }
+
+@keyframes slide-down {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.animate-slide-down {
+  animation: slide-down 0.1s ease-out;
+}
+
+@keyframes slide-up {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-150%);
+  }
+}
+
+.animate-slide-up {
+  animation: slide-up 0.2s ease-out forwards;
+}
