--- a/public/input.css
+++ b/public/input.css
@@ -50,7 +50,7 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   transition: background-color 600000s 0s, color 600000s 0s;
 }
-Ø input[data-autocompleted] {
+input[data-autocompleted] {
   background-color: transparent !important;
 }
 
